--- a/Bookshelf/Views/Main.xaml
+++ b/Bookshelf/Views/Main.xaml
@@ -61,7 +61,8 @@
             <VerticalStackLayout MaximumWidthRequest="400" Padding="4" >
                 <Frame Style="{ StaticResource MainFrame }" Margin="0" >
                     <VerticalStackLayout Spacing="2" >
-                        <Frame Style="{ StaticResource FrameCardItem }" HorizontalOptions="CenterAndExpand">
+                        <!--<ActivityIndicator IsVisible="{Binding IsBusy}" IsRunning="{Binding IsBusy}" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" ></ActivityIndicator>-->
+                        <Frame Style="{ StaticResource FrameCardItem }">
                             <Frame.GestureRecognizers>
                                 <TapGestureRecognizer Command="{Binding IllReadCommand}" />
                             </Frame.GestureRecognizers>
@@ -158,7 +159,9 @@
                                     ImageSource="book_solid_15_w.png" ContentLayout="Left, 10" />
                                 <Button Text="Listar Todos" Grid.Row="0" Grid.Column="1" HorizontalOptions="FillAndExpand" Style="{StaticResource BtnSecondary}" FontSize="15"
                                     ImageSource="bars_staggered_solid_15_w.png" BackgroundColor="#2D4144" ContentLayout="Left, 10" Command="{Binding ArchiveCommand}" />
-                            </Grid>                            
+                            </Grid>
+                            <Button Text="Add"  HorizontalOptions="FillAndExpand" Style="{StaticResource BtnSecondary}" FontSize="15"
+                                    ImageSource="bars_staggered_solid_15_w.png" BackgroundColor="#2D4144" ContentLayout="Left, 10" Command="{Binding GoogleSearchCommand}" />
                             <Grid HorizontalOptions="FillAndExpand" Margin="0,5,0,0">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="*"/>
