--- a/Bookshelf/Views/AddUser.xaml
+++ b/Bookshelf/Views/AddUser.xaml
@@ -4,6 +4,7 @@
              x:Class="Bookshelf.Views.AddUser"
              Title="Cadastrar Usuário"           
              Shell.FlyoutBehavior="Disabled"
+             xmlns:Icons="clr-namespace:Bookshelf.Resources.Fonts.Styles"
              Style="{StaticResource ContentPage}" >
     <ContentPage.Content>
         <VerticalStackLayout Style="{StaticResource MainStackLayout}" VerticalOptions="Center" MaximumWidthRequest="500">
@@ -20,8 +21,12 @@
                     <Label Text="Confirmação da senha" Style="{StaticResource LblEntry}" />
                     <Entry IsPassword="True" Style="{StaticResource Entry}" x:Name="EntConfSenha" Text="{Binding ConfirmPassword}" MaximumWidthRequest="250" MinimumWidthRequest="150" MaxLength="25"/>
 
-                    <Button x:Name="BtnCreateUser" Text="Cadastrar" Style="{StaticResource MainBtn}" ImageSource="user_plus_solid_15_w.png" ContentLayout="Left, 10"
-                            Command="{Binding AddUserCommand}" IsEnabled="{Binding BtnCreateUserIsEnabled}" Margin="0,10,0,20" />
+                    <Button x:Name="BtnCreateUser" Text="Cadastrar" Style="{StaticResource MainBtn}" ContentLayout="Left, 10"
+                            Command="{Binding AddUserCommand}" IsEnabled="{Binding BtnCreateUserIsEnabled}" Margin="0,10,0,20" >
+                    <Button.ImageSource>
+                        <FontImageSource  FontFamily="FontAwesome" Color="#EDEDED" Glyph="{x:Static Icons:IconFont.UserPlus}" Size="15"></FontImageSource>
+                    </Button.ImageSource>
+                    </Button>
                 </VerticalStackLayout>
             </Frame>
         </VerticalStackLayout>
