--- a/Bookshelf/Views/GoogleSearch/GoogleBooksResults.xaml
+++ b/Bookshelf/Views/GoogleSearch/GoogleBooksResults.xaml
@@ -4,29 +4,54 @@
              x:Class="Bookshelf.Views.GoogleSearch.GoogleBooksResults"
              xmlns:vm="clr-namespace:Bookshelf.ViewModels.GoogleSearch"
              x:DataType="vm:GoogleBooksResultsVM"
-               xmlns:model="clr-namespace:BookshelfModels.Books.GoogleApi;assembly=BookshelfModels"
+             xmlns:behaviors="clr-namespace:Bookshelf.Utils.Behaviors" 
+             xmlns:model="clr-namespace:BookshelfModels.Books.GoogleApi;assembly=BookshelfModels"
              Title="{Binding PageTitle}" 
              Style="{StaticResource ContentPage}"
              >
     <ContentPage.Content>
-        <StackLayout Style="{StaticResource MainStackLayout}" VerticalOptions="FillAndExpand">
-            <Frame Style="{ StaticResource MainFrame }" HorizontalOptions="FillAndExpand" Margin="5">
+        <StackLayout Style="{StaticResource MainStackLayout}" VerticalOptions="FillAndExpand" BackgroundColor="#192D30" >
+            <Frame Style="{ StaticResource MainFrame }" HorizontalOptions="FillAndExpand" Margin="5" >
                 <VerticalStackLayout HorizontalOptions="FillAndExpand">
                     <!--<Picker ItemsSource="{Binding ParametersList}" Style="{StaticResource Picker}" Margin="0,5,0,5" />-->
-                    <Entry Placeholder="Buscar" Style="{StaticResource Entry}" TextTransform="Uppercase" HorizontalOptions="FillAndExpand" Text="{Binding SearchText}" />
+                    <Entry Placeholder="Buscar" 
+                           Style="{StaticResource Entry}" 
+                           TextTransform="Uppercase"
+                           HorizontalOptions="FillAndExpand"
+                           Text="{Binding SearchText}" 
+                           />
                 </VerticalStackLayout>
             </Frame>
-            <Frame Style="{ StaticResource MainFrame }" VerticalOptions="FillAndExpand" Margin="5,0">
-                <ListView  HasUnevenRows="True" CachingStrategy="RecycleElement" 
-                          ItemsSource="{Binding GoogleBooksList}" >
+            <Frame Style="{ StaticResource MainFrame }" VerticalOptions="FillAndExpand" Margin="1,0">
+
+            
+                <!--http://books.google.com/books/content?id=6RCcBAAAQBAJ&printsec=frontcover&img=1&zoom=5&edge=curl&source=gbs_api-->
+                
+                <ListView HasUnevenRows="True" 
+                          CachingStrategy="RecycleElement" 
+                          ItemsSource="{Binding GoogleBooksList}" 
+                          >
+                    <ListView.Behaviors>
+                        <behaviors:InfiniteScrollBehavior LoadMoreCommand="{Binding LoadMoreCommand}" />
+                    </ListView.Behaviors>
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="model:UIGoogleBook">
                             <ViewCell>
-                                <Frame Margin="5" BorderColor="BlueViolet">
+                                <Frame Margin="1" BorderColor="Gray" BackgroundColor="GhostWhite" CornerRadius="10">
                                     <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" Spacing="5">
+                                        <Label Text="{Binding Title}"
+                                                   Grid.Row="0" Grid.Column="1"       
+                                                   TextColor="Black" 
+                                                   VerticalOptions="StartAndExpand" 
+                                                   VerticalTextAlignment="Start" 
+                                                   MaxLines="1" 
+                                                   LineBreakMode="TailTruncation" 
+                                                   FontSize="22" 
+                                                   TextDecorations="Underline"
+                                                   FontFamily="EBGaramondSemiBold"
+                                                   />
                                         <Grid HorizontalOptions="FillAndExpand" HeightRequest="150">
                                             <Grid.RowDefinitions>
-                                                <RowDefinition Height="*"/>
                                                 <RowDefinition Height="20"/>
                                                 <RowDefinition Height="20"/>
                                                 <RowDefinition Height="12"/>
@@ -38,15 +63,49 @@
                                                 <ColumnDefinition  Width ="3*" />
                                                 <ColumnDefinition  Width ="6*" />
                                             </Grid.ColumnDefinitions>
-                                            <Image Source="{Binding Thumbnail}" Grid.RowSpan="5"  Aspect="AspectFit"  />
-                                            <Label Text="{Binding Title}" Grid.Row="0" Grid.Column="1" VerticalTextAlignment="Start" MaxLines="2" LineBreakMode="TailTruncation"  FontSize="Small" FontAttributes="Bold" />
-                                            <Label Text="{Binding Authors}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start" Grid.Row="1" Grid.Column="1" FontSize="Micro" LineBreakMode="TailTruncation" FontAttributes="Italic"/>
-                                            <Label Text="{Binding PageCount}"  HorizontalTextAlignment="Start" VerticalTextAlignment="Start" Grid.Row="2" Grid.Column="1" FontSize="Micro"/>
-                                            <Label Text="Ano:" Grid.Row="3"  HorizontalTextAlignment="Start" VerticalTextAlignment="Start" Grid.Column="1" TextColor="Black" FontAttributes="Italic" FontSize="10"/>
-                                            <Label Text="{Binding PublishedDate}" HorizontalTextAlignment="Start"  VerticalTextAlignment="Start" Grid.Row="4" Grid.Column="1" FontSize="Micro" LineBreakMode="TailTruncation" />
+                                            <Image Source="{Binding Thumbnail}" 
+                                                   Grid.RowSpan="4"
+                                                   Aspect="AspectFit"
+                                                   Margin="0,0,10,0"
+                                                   />
+                                            <Label Text="{Binding Authors}"
+                                                   Grid.Row="0" Grid.Column="1"
+                                                   VerticalTextAlignment="Start" 
+                                                   HorizontalTextAlignment="Start"
+                                                   FontSize="15"
+                                                   LineBreakMode="TailTruncation"
+                                                   FontFamily="EBGaramondRegular"
+                                                   TextColor="#4e4e4e"
+                                                   />
+                                            <Label Text="{Binding PageCount, StringFormat='Páginas: {0:F0}'}"
+                                                   Grid.Row="1" Grid.Column="1"
+                                                   HorizontalTextAlignment="Start" 
+                                                   VerticalTextAlignment="Start"
+                                                   FontSize="15"
+                                                   LineBreakMode="TailTruncation"
+                                                   FontFamily="EBGaramondRegular"
+                                                   TextColor="Black"
+                                                   />
+                                            <Label Text="Ano:" 
+                                                   Grid.Row="2"
+                                                   Grid.Column="1"
+                                                   HorizontalTextAlignment="Start"
+                                                   VerticalTextAlignment="Start"
+                                                   TextColor="Black"
+                                                   FontAttributes="Italic" 
+                                                   FontSize="10"
+                                                   />
+                                            <Label Text="{Binding PublishedDate}" 
+                                                   Grid.Row="3" Grid.Column="1" 
+                                                   VerticalTextAlignment="Start" 
+                                                   HorizontalTextAlignment="Start"
+                                                   FontSize="15"
+                                                   LineBreakMode="TailTruncation" 
+                                                   FontFamily="EBGaramondRegular"
+                                                   TextColor="#4e4e4e"
+                                                   />
                                             <!--<Label  Text="Categoria:" Grid.Row="5"  HorizontalTextAlignment="Start" VerticalTextAlignment="Start" Grid.Column="1" TextColor="Black" FontAttributes="Italic" FontSize="10"/>
                                         <Label  Text="{Binding Categories}" HorizontalTextAlignment="Start" VerticalTextAlignment="Start" Grid.Row="6" Grid.Column="1" FontSize="Micro"/>-->
-
                                         </Grid>
                                     </StackLayout>
                                 </Frame>
@@ -60,9 +119,12 @@
                                     <Setter Property="HeightRequest" Value="0" />
                                 </Trigger>
                             </Grid.Triggers>
-                            <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" 
-                                       Color="#2196F3" VerticalOptions="Center" 
-                                       HorizontalOptions="Center"/>
+                            <ActivityIndicator IsRunning="{Binding IsBusy}" 
+                                               IsVisible="{Binding IsBusy}"  
+                                               Color="#2196F3" 
+                                               VerticalOptions="Center" 
+                                               HorizontalOptions="Center"
+                                               />
                         </Grid>
                     </ListView.Footer>
                 </ListView>
