--- a/Bookshelf/Views/Login.xaml
+++ b/Bookshelf/Views/Login.xaml
@@ -6,38 +6,40 @@
              NavigationPage.HasNavigationBar="False"
              xmlns:vm="clr-namespace:Bookshelf.ViewModels"
              x:DataType="vm:LoginVM"
+             xmlns:Icons="clr-namespace:Bookshelf.Resources.Fonts.Styles"
              Shell.NavBarIsVisible="False"
-             Style="{StaticResource ContentPage}" 
+             Style="{StaticResource ContentPage}"
              >
-  
     <VerticalStackLayout Style="{StaticResource MainStackLayout}" VerticalOptions="Center">
         <Frame Style="{StaticResource MainFrame}" IsEnabled="{Binding IsNotBusy}">
-            <VerticalStackLayout >
-                <Image Source="book_solid.png" SemanticProperties.Description="Bookshelf - Gerenciamento de livros" HeightRequest="50" HorizontalOptions="Center"  Aspect="AspectFit"/>
+            <VerticalStackLayout>
+                <Label Text="{x:Static Icons:IconFont.BookReader}" TextColor="Black" HorizontalOptions="Center" FontFamily="FontAwesome" FontSize="50" Padding="0,0,0,10"></Label>
                 <Label Text="Email" Style="{StaticResource LblEntry}"></Label>
                 <Entry x:Name="EntEmail" HorizontalOptions="Start" Style="{StaticResource Entry}" MaximumWidthRequest="350" MinimumWidthRequest="250" Text="{Binding Email}" />
-
-                <Label Text="Senha" Style="{StaticResource LblEntry}" ></Label>
+                <Label Text="Senha" Style="{StaticResource LblEntry}"></Label>
                 <Entry x:Name="EntPassword" Style="{StaticResource Entry}" IsPassword="True" HorizontalOptions="Start" WidthRequest="180" Text="{Binding Password}" />
-
                 <Button Text="{Binding SignInText}" Margin="0,10,0,20" Style="{StaticResource MainBtn}" 
-                            FontSize="20" ImageSource="right_to_bracket_solid_20_w.png"  IsEnabled="{Binding BtnSignEnabled}"
-                            ContentLayout="Left, 10" Command="{Binding SignInCommand}"  />
+                            FontSize="20" IsEnabled="{Binding BtnSignEnabled}"
+                            ContentLayout="Left, 10" Command="{Binding SignInCommand}">
+                    <Button.ImageSource>
+                        <FontImageSource  FontFamily="FontAwesome" Color="#EDEDED" Glyph="{x:Static Icons:IconFont.SignInAlt}" Size="15"></FontImageSource>
+                    </Button.ImageSource>
+                </Button>
                 <HorizontalStackLayout>
-                    <Label Text="Não tem conta? " FontFamily="EBGaramondBold" TextColor="#4B4B4B" Margin="0,0,5,0"/>
+                    <Label Text="Não tem conta?" FontFamily="EBGaramondBold" TextColor="#4B4B4B" Margin="0,0,5,0"/>
                     <Label Text="Criar Conta" HorizontalOptions="Start" FontFamily="EBGaramondBold" TextColor="#362624" TextDecorations="Underline" >
-                    <Label.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding CreateUserCommand}"/>
-                    </Label.GestureRecognizers>
-                </Label>
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding CreateUserCommand}"/>
+                        </Label.GestureRecognizers>
+                    </Label>
                 </HorizontalStackLayout>
                 <HorizontalStackLayout Margin="0,5,0,0">
-                    <Label Text="Esqueceu sua senha? " FontFamily="EBGaramondBold" TextColor="#4B4B4B" Margin="0,0,5,0"/>
+                    <Label Text="Esqueceu sua senha?" FontFamily="EBGaramondBold" TextColor="#4B4B4B" Margin="0,0,5,0"/>
                     <Label Text="Recuperar Senha" FontFamily="EBGaramondBold" HorizontalOptions="End" TextColor="#362624" TextDecorations="Underline" >
-                    <Label.GestureRecognizers>
-                        <TapGestureRecognizer Command="{Binding UpdatePasswordCommand}"/>
-                    </Label.GestureRecognizers>
-                </Label>
+                        <Label.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding UpdatePasswordCommand}"/>
+                        </Label.GestureRecognizers>
+                    </Label>
                 </HorizontalStackLayout>
                 <!--<Button Text="Cadastrar" x:Name="BtnAddUser" Command="{Binding CreateUserCommand}" Margin="0,0,0,5"
                                 Style="{StaticResource BtnSecondary}" BackgroundColor="#2D4144" FontSize="15" ImageSource="user_plus_solid_15_w.png" ContentLayout="Left, 20" />
@@ -45,6 +47,6 @@
                                 Style="{StaticResource BtnSecondary}"  BackgroundColor="#2D4144" FontSize="15" ImageSource="unlock_solid_15_w.png" ContentLayout="Left, 20"/>-->
             </VerticalStackLayout>
         </Frame>
-        
+
     </VerticalStackLayout>
 </ContentPage>
