--- a/Bookshelf/Views/UpdatePassword.xaml
+++ b/Bookshelf/Views/UpdatePassword.xaml
@@ -3,18 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Bookshelf.Views.UpdatePassword"
              Style="{StaticResource ContentPage}" 
+             xmlns:Icons="clr-namespace:Bookshelf.Resources.Fonts.Styles"
              Title="Recuperar senha" >
     <ContentPage.Content>
         <VerticalStackLayout Style="{StaticResource MainStackLayout}" VerticalOptions="Center" MaximumWidthRequest="500" >
             <Frame Style="{ StaticResource MainFrame }">
                 <VerticalStackLayout>
-                    <!--<Image SemanticProperties.Description="Alterar senha" HeightRequest="30"  Style="{ StaticResource ImgIcon }" Source="unlock_solid_30.png" />-->
-
                     <Label Text="Email" Style="{StaticResource LblEntry}"/>
                     <Entry Text="{Binding Email}" MaxLength="400" Style="{StaticResource Entry}" MaximumWidthRequest="350" MinimumWidthRequest="250"/>
-
                     <Button Text="Enviar Email de Alteração de Senha" x:Name="BtnConfirmar" Style="{StaticResource MainBtn}" Command="{Binding UpdatePasswordCommand}" Margin="0,10,0,5"
-                             FontSize="10" ImageSource="envelope_solid_20_w.png" ContentLayout="Left, 20" />
+                             FontSize="10" ContentLayout="Left, 20" >
+                        <Button.ImageSource>
+                            <FontImageSource  FontFamily="FontAwesome" Color="#EDEDED" Glyph="{x:Static Icons:IconFont.Envelope}" Size="15"></FontImageSource>
+                        </Button.ImageSource>
+                    </Button>
                 </VerticalStackLayout>
             </Frame>
         </VerticalStackLayout>
